# kitfox

./: Cargo.toml
kitfox/: Cargo.toml  package-lock.json  package.json  vite.config.ts
kitfox/src/: App.vue  main.rs  main.ts  styles.css
kitfox/src-tauri/: Cargo.toml  tauri.conf.json
kitfox/src-tauri/src/: main.rs
kitfox/src/components/: Greet.vue
kitfox/src/stores/: resource.js
kitfox/src/views/: Settings.vue  Storage.vue
kitfox_raw/: Cargo.toml
kitfox_raw/src/: main.rs
kitfoxd/: Cargo.toml
kitfoxd/conf/: kitfoxd.conf  org.fairchildtech.Kitfox.policy
kitfoxd/src/: main.rs  resource.rs
kitfoxd/src/resource/: in_tree_nvme.rs
kitfoxi/: Cargo.toml
kitfoxi/src/: error.rs  ioctl.rs  linux.rs  main.rs  resource.rs
kitfoxi/src/linux/: in_tree_nvme.rs  nvme.rs
kitfoxit/: Cargo.toml
kitfoxit/src/: lib.rs  main.rs
kitfoxm/: Cargo.toml
kitfoxm/src/: actions.rs  error.rs  lib.rs
kitfoxm_derive/: Cargo.toml
kitfoxm_derive/src/: lib.rs
kitfoxr/: Cargo.toml
kitfoxr/src/linux/: nvme.rs
