[package]
name = "kitfoxd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kitfoxm = { path = "../kitfoxm" }
kitfoxm_derive = { path = "../kitfoxm_derive" }
impls = "1.0"
paste = "1.0"
serde_json = "1.0"
uuid = { version = "1.2.2", features = [ "v4", "fast-rng", "serde" ]}
tokio = { version = "1", features = ["full"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }